WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23656
AX hierarchy for iFrames is incorrect
https://bugs.webkit.org/show_bug.cgi?id=23656
Summary
AX hierarchy for iFrames is incorrect
chris fleizach
Reported
2009-01-30 14:59:41 PST
the hierarchy when iframes are present is incorrect. A different scroll area is returned when going down compared to when going up
Attachments
patch to fix AX hierarchy
(5.19 KB, patch)
2009-01-30 15:07 PST
,
chris fleizach
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-01-30 15:07:09 PST
Created
attachment 27199
[details]
patch to fix AX hierarchy
Oliver Hunt
Comment 2
2009-01-30 15:31:26 PST
Comment on
attachment 27199
[details]
patch to fix AX hierarchy r=me
chris fleizach
Comment 3
2009-01-30 15:46:45 PST
http://trac.webkit.org/changeset/40430
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug