Bug 23656: AX hierarchy for iFrames is incorrect https://bugs.webkit.org/show_bug.cgi?id=23656

The AX hierarchy when an iFrame was present was incorrect. A different scroll area was returned when going down compared to when going up.




Canonical link: https://commits.webkit.org/32613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40430 268f45cc-cd09-0410-ab3c-d52691b4dbfc